# globimap

./: .gitignore  .gitmodules  CMakeLists.txt  clean_experiments.sh  example_sierpinski.py  paper_plan.md  setup.py
experiments/: config.json  config_test_datasets_for_k  config_test_datasets_for_k_test  config_test_datasets_new  config_test_datasets_with_errord
experiments/notebooks/: .gitignore  AbundanceR.ipynb  resolutions.ipynb  resolutions2.ipynb  server.py  server1.py  server1.py.save  test_datasets_for_k.ipynb  test_datasets_full_time.ipynb  test_datasets_new.ipynb  test_datasets_with_errord.ipynb  test_polygon.ipynb  test_polygons_mask.ipynb
experiments/polygons_stat/: Global_LSIB_Polygons_Detailed-16384x16384.json  tl_2017_us_zcta510-16384x16384.json
experiments/src/: globimap_print_poly_stats.cpp  globimap_rasterize_polys.cpp  globimap_test_config.hpp  globimap_test_cos.cpp  globimap_test_dataset.cpp  globimap_test_dataset_full_time.cpp  globimap_test_dataset_new.cpp  globimap_test_datasets_for_k.cpp  globimap_test_old.cpp  globimap_test_polygon.cpp  globimap_test_polygons_mask.cpp  loc.hpp  rasterizer.hpp
experiments/test_cos/: test_cos.w8192h8192l65536.0000-k_8bits_1.logsize_16.json  test_cos.w8192h8192l65536.0001-k_8bits_1.8.logsize_16.24.json  test_cos.w8192h8192l65536.0002-k_8bits_1.8.16.logsize_16.24.32.json  test_cos.w8192h8192l65536.0003-k_8bits_1.8.32.logsize_16.24.32.json  test_cos.w8192h8192l65536.0004-k_8bits_1.8.64.logsize_16.24.32.json  test_cos.w8192h8192l65536.0005-k_8bits_1.16.logsize_16.24.json  test_cos.w8192h8192l65536.0006-k_8bits_1.16.32.logsize_16.24.32.json  test_cos.w8192h8192l65536.0007-k_8bits_1.16.64.logsize_16.24.32.json  test_cos.w8192h8192l65536.0008-k_8bits_1.32.logsize_16.24.json  test_cos.w8192h8192l65536.0009-k_8bits_1.32.64.logsize_16.24.32.json  test_cos.w8192h8192l65536.0010-k_8bits_1.64.logsize_16.24.json  test_cos.w8192h8192l65536.0011-k_8bits_8.logsize_16.json  test_cos.w8192h8192l65536.0012-k_8bits_8.16.logsize_16.24.json  test_cos.w8192h8192l65536.0013-k_8bits_8.16.32.logsize_16.24.32.json  test_cos.w8192h8192l65536.0014-k_8bits_8.16.64.logsize_16.24.32.json  test_cos.w8192h8192l65536.0015-k_8bits_8.32.logsize_16.24.json  test_cos.w8192h8192l65536.0016-k_8bits_8.32.64.logsize_16.24.32.json  test_cos.w8192h8192l65536.0017-k_8bits_8.64.logsize_16.24.json  test_cos.w8192h8192l65536.0018-k_8bits_1.logsize_16.json  test_cos.w8192h8192l65536.0019-k_8bits_1.8.logsize_16.32.json  test_cos.w8192h8192l65536.0020-k_8bits_1.8.16.logsize_16.32.24.json  test_cos.w8192h8192l65536.0021-k_8bits_1.8.32.logsize_16.32.24.json  test_cos.w8192h8192l65536.0022-k_8bits_1.8.64.logsize_16.32.24.json  test_cos.w8192h8192l65536.0023-k_8bits_1.16.logsize_16.32.json  (+192 more)
globimap/: Makefile  archive.h  counting_globimap.hpp  globimap.cpp  globimap.hpp  globimap_layer.hpp  globimap_print_poly_stats.cpp  globimap_rasterize_polys.cpp  globimap_test.cpp  globimap_test_config.hpp  globimap_test_cos.cpp  globimap_test_dataset.cpp  globimap_test_dataset_full_time.cpp  globimap_test_dataset_new.cpp  globimap_test_datasets_for_k.cpp  globimap_test_k_dataset.cpp  globimap_test_old.cpp  globimap_test_polygon.cpp  globimap_test_polygons_mask.cpp  globimap_v2.hpp  hashfn.hpp  pybind.cpp  rasterizer.hpp  shapefile.hpp  test_config.hpp
src/: globimap.cpp  globimap.hpp  murmur.hpp  sample.py
tests/: globimap_test.py
(+14111 files in other folders)
